Adjust layout and rename html file to be relevant with the page content.

--- a/Search.html
+++ b/Search.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/Style.css">
 
     <script src="https://kit.fontawesome.com/c731891936.js" crossorigin="anonymous"></script>
-    <title>Söknings resultad sida</title>
+    <title>Sök sida</title>
 </head>
 <body>
     <!--WRAPPER-->
@@ -20,50 +20,46 @@
           
             <nav class="menu">
                 <a href="" class="menu__link">
-                    <h3 class="heading__title-third">Hotelet</h3>
+                    <h3 class="menu__title">Hotelet</h3>
+                </a>    
+                <a href="" class="menu__link">
+                    <h3 class="menu__title">Erbjuanden</h3>
                 </a>
                 <a href="" class="menu__link">
-                    <h3 class="heading__title-third">Erbjuanden</h3>
+                    <h3 class="menu__title">Fest & Event</h3>
                 </a>
                 <a href="" class="menu__link">
-                    <h3 class="heading__title-third">Fest & Event</h3>
+                    <h3 class="menu__title">Aktiviteter</h3>
                 </a>
                 <a href="" class="menu__link">
-                    <h3 class="heading__title-third">Aktiviteter</h3>
-                </a>
-                <a href="" class="menu__link">
-                    <h3 class="heading__title-third">Mina sidor</h3>
+                    <h3 class="menu__title">Mina sidor</h3>
                 </a>
             </nav>
         </header>
 
         <!--MAIN CONTAINER-->
-        <main class="results">
-            <h2 class="results__heading-title heading__title-second heading__title-second--small">
+        <main class="search">
+            <h2 class="search__heading-title heading__title-second heading__title-second--small">
                 VÄLJ DITT RUM
             </h2>
-            <p class="article__text">
-                Du har sökt fredag 3 jan - sön 5 jan , 2 nätter, 1 rum , 2 gäster
-            </p>
-            <section class="results__box results__box--sticky">
+            <section class="search__form search__form--sticky">
             <h1 class="heading__title-first">
-                DU HAR SÖKT
+                SÖK & BOKA
             </h1>
-            <section class="result__date__in">
-                <h3 class="heading__title-third">
-                    INCHECKNING
-                </h3>
-                <aside class="results-date__title">
-                    <h2 class="heading__title-second">
-                        3 Jan
-                    </h2>
-                    <p class="article__text">Fredag</p>
-                </aside>
-            </section>
+            <form action="">
+                <label for="check-in__date" class="form__label label-name">Checka In:</label>
+                <input type="date" id="check-in__date" class="form__input input-details">
 
-            <section class="results__date__out">
+                <label for="check-out__date" class="form__label label-name">Checka ut:</label>
+                <input type="date" id="check-out__date" class="form__input input-details">
 
-            </section>
+                <label class="label-name">Antal gäster:</label>
+                <label for="adult__quantity" class="form__label label-name">Vuxen</label>
+                <input type="number" id="adult__quantity" class="form__input input-details" placeholder="2 gäster">
+
+                <label for="children__quantity" class="form__label label-name">Barn</label>
+                <input type="number" id="children__quantity" class="form__input input-details" placeholder="upp till 17 år">
+            </form>
             <button class="form-btn__submit-button search-form-btn__submit-button">
                 <i class="fa-solid fa-magnifying-glass"></i>SÖK
             </button>
@@ -84,7 +80,7 @@
                 <i class="fa-solid fa-circle-info"></i>
                 MER INFO
              </button>
-             <button class="room-btn__booking-btn submit-btn__button">
+             <button class="submit-btn__button">
                 VÄLJA & BOKA
                </button>
              </aside>
