Created booking form page

--- a/Hotel.html
+++ b/Hotel.html
@@ -33,9 +33,10 @@
             <a href="" class="menu__link">
                 <h3 class="menu__title">Aktiviteter</h3>
             </a>
-            <a href="" class="menu__link">
-                <h3 class="menu__title">Mina sidor</h3>
-            </a>
+            <h3 class="menu__title menu__title--icon">
+              <i class="fa-regular fa-user"></i>
+              Mina sidor
+          </h3>
         </nav>
         
       </header>
@@ -72,7 +73,7 @@
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
-             <aside class="room-btn__button">
+            <aside class="room-btn__button">
              <button class="info-btn__submit-btn info-btn__submit-btn--drak">
               <i class="fa-regular fa-image"></i>
               VISA FLER BILDER
