--- a/Results.html
+++ b/Results.html
@@ -31,54 +31,60 @@
                 <a href="" class="menu__link">
                     <h3 class="menu__title">Aktiviteter</h3>
                 </a>
-                <a href="" class="menu__link">
-                    <h3 class="menu__title">Mina sidor</h3>
-                </a>
+                <h3 class="menu__title menu__title--icon">
+                    <i class="fa-regular fa-user"></i>
+                    Mina sidor
+                </h3>
             </nav>
         </header>
 
         <!--MAIN CONTAINER-->
         <main class="results">
             <section class="results__heading-title">
-                <h2 class="results__heading-title heading__title-second heading__title-second--small">
+                <h1 class="results__heading-title heading__title-second heading__title-second--small">
                     VÄLJ DITT RUM
-                </h2>
+                </h1>
                 <p class="results__text--center article-text">
                     Du har sökt fredag 3 jan - sön 5 jan , 2 nätter, 1 rum , 2 gäster
                 </p>
             </section>
             <section class="results__flex-box results__box--sticky">
-                <h1 class="heading__title-first">
+                <h2 class="heading__title-second--small">
                     DU HAR SÖKT
-                </h1>
+                </h2>
                 <section class="result__date__in">
                     <aside class="results-date__title">
-                    <h3 class="heading__title-third">
+                    <h3 class="heading__title-third--small heading__title-third">
                         INCHECKNING
                     </h3>
+                    <fieldset class="results__fieldset--center">
                     <h2 class="heading__title-second">
                             3 Jan
                         </h2>
-                        <p class="article-text">Fredag</p>
+                        <p class="article-text--center">Fredag</p>
+                    </fieldset>
                     </aside> 
+                </section>
                 
 
                 <section class="results__date__out">
                     <aside class="results-date__title">
-                        <h3 class="heading__title-third">
+                        <h3 class="heading__title-third--small heading__title-third">
                             UTCHECKNING
                         </h3>
+                        <fieldset class="results__fieldset--center">
                         <h2 class="heading__title-second">
                             5 Jan
                         </h2>
-                        <p class="article-text">Fredag</p>
+                        <p class="article-text--center">Fredag</p>
+                        </fieldset>
                     </aside>
                 </section>
-                    <p class="article-text">Antal nätter</p>
-                    <p class="article-text">2 nätter</p>
-                    <p class="article-text">Antal rum:</p>
-                    <p class="article-text">1 rum, 2 gäster</p>
-                    <button class="submit-btn">
+
+                    <p class="article-text">Antal nätter: 2nätter</p>
+                    <p class="article-text">Antal rum: 1 rum, 2 gäster</p>
+                    
+                    <button class="submit-btn__button submit-btn__button--small">
                         ÄNDRA SÖKNING
                     </button>
                 </section>
