--- a/Search.html
+++ b/Search.html
@@ -31,21 +31,22 @@
                 <a href="" class="menu__link">
                     <h3 class="menu__title">Aktiviteter</h3>
                 </a>
-                <a href="" class="menu__link">
-                    <h3 class="menu__title">Mina sidor</h3>
-                </a>
+                <h3 class="menu__title menu__title--icon">
+                    <i class="fa-regular fa-user"></i>
+                    Mina sidor
+                </h3>
             </nav>
         </header>
 
         <!--MAIN CONTAINER-->
         <main class="search">
-            <h2 class="search__heading-title heading__title-second heading__title-second--small">
+            <h1 class="search__heading-title heading__title-first--center">
                 VÄLJ DITT RUM
-            </h2>
-            <section class="search__form search__form--sticky">
-            <h1 class="heading__title-first">
-                SÖK & BOKA
             </h1>
+            <section class="search__form search__form--sticky">
+            <h2 class="heading__title-second">
+                SÖK & BOKA
+            </h2>
             <form action="">
                 <label for="check-in__date" class="form__label label-name">Checka In:</label>
                 <input type="date" id="check-in__date" class="form__input input-details">
