--- a/Results.html
+++ b/Results.html
@@ -40,14 +40,13 @@
 
         <!--MAIN CONTAINER-->
         <main class="results">
-            <section class="results__heading-title">
-                <h1 class="results__heading-title heading__title-second heading__title-second--small">
+            <!--<section class="results__heading-title">-->
+                <h1 class="search__heading-title heading__title-first--center">
                     VÄLJ DITT RUM
                 </h1>
                 <p class="results__text--center article-text">
                     Du har sökt fredag 3 jan - sön 5 jan , 2 nätter, 1 rum , 2 gäster
                 </p>
-            </section>
             <section class="results__flex-box results__box--sticky">
                 <h2 class="heading__title-second--small">
                     DU HAR SÖKT
