Added giftcard section to landing page and improved code and layout

--- a/Hotel.html
+++ b/Hotel.html
@@ -42,12 +42,13 @@
       </header>
           
             <section class="header__image">
-                <img src="assets/images/09-day.jpg" alt="view outside the hotel room" class="headeing__artical">
-                <h1 class="header__title heading__title-first">
+              <figure class="header__image--bg"></figure>
+          
+                <h1 class="header__title-first heading__title-first--larg">
                   BONZ.AI 
                 </h1>
-                <h1 class="header__title heading__title-first">INNOVATIV & MILJÖVÄNLIG BOENDET</h1>
-                <h2 class="header__sub-title heading__title-second">
+                <h1 class="header__title-first heading__title-first--larg">INNOVATIV & MILJÖVÄNLIG BOENDET</h1>
+                <h2 class="header__sub-title header__sub-title--small">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati quasi, odio facere perferendis ad. Eaque, odit qui voluptatem perferendis molestiae animi, itaque amet tempora, repellat facere assumenda dolore maxime?
                 </h2>
                 <section class="sumit-btn">
@@ -68,7 +69,7 @@
             <article class="room__article">
              <img src="assets/images/king-size-bed.png" alt="dubble bedroom with king size bed">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Dubbelrum premium Svit – 27 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -89,7 +90,7 @@
           <article class="room__article">
              <img src="assets/images/delux-room.png" alt="dubble bed for delux room">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Dubbelrum Deluxe – 27 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -111,7 +112,7 @@
           <article class="room__article">
              <img src="assets/images/04-day.jpg" alt="dubble bedroom with king size bed">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Familjen stuga – 105 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -133,7 +134,7 @@
           <article class="room__article">
              <img src="assets/images/05-day.jpg" alt="dubble bedroom with king size bed">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Familjen stuga – 115 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -154,7 +155,7 @@
           <article class="room__article">
              <img src="assets/images/08-day.jpg" alt="dubble bedroom with king size bed">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Premium stuga – 120 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -176,7 +177,7 @@
           <article class="room__article">
              <img src="assets/images/living-room.png" alt="dubble bedroom with king size bed">
              <h2 class="heading__title-second--small">
-              Dubbelrum premium Suite – 27 kvm
+              Premium lägenhet – 69 kvm
              </h2>
              <p class="article-text articles-detail__box">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
@@ -282,6 +283,20 @@
               </article>
           </section>
         </aside>
+
+        <!--PRESENTKORT-->
+        <section class="gift-container">
+          <article class="gift">
+              <figure class="gift__image"></figure>
+          </article>
+          <article class="gift-article">
+              <h2 class="heading__title-second heading__title-second--left">ENKEL ATT GE, UNDERBART ATT FÅ</h2>
+              <p class="article-text">Kanske tänker du att presentkort är tråkigt att ge?<br>
+                  Lorem ipsum dolor sit amet consectetur. Sit venenatis arcu nunc consectetur neque. Vel amet netus amet eu elit.</p>
+              <button type="submit" class="submit-btn__button">BESTÄLLA PRESENTKORT</button>
+          </article>
+      </section>
+      <hr>
 
         <footer class="grid-footer">
 
