--- a/Results.html
+++ b/Results.html
@@ -39,15 +39,17 @@
         </header>
 
         <!--MAIN CONTAINER-->
-        <main class="results">
+        <main class="results-container">
             <!--<section class="results__heading-title">-->
-                <h1 class="search__heading-title heading__title-first--center">
+                <h1 class="header__title-first header__title-first__padding-top">
                     VÄLJ DITT RUM
                 </h1>
-                <p class="results__text--center article-text">
+                <h3 class="heading__title-third">
                     Du har sökt fredag 3 jan - sön 5 jan , 2 nätter, 1 rum , 2 gäster
-                </p>
-            <section class="results__flex-box results__box--sticky">
+                </h3>
+
+                <div class="results">
+                <section class="results__flex-box results__box--sticky">
                 <h2 class="heading__title-second--small">
                     DU HAR SÖKT
                 </h2>
@@ -174,6 +176,7 @@
             </aside>
         </article>
         </section>
+    </div>
     
     </main>
 
