--- a/Search.html
+++ b/Search.html
@@ -39,11 +39,12 @@
         </header>
 
         <!--MAIN CONTAINER-->
-        <main class="search">
-            <h1 class="search__heading-title heading__title-first--center">
+        <main class="search-container__title">
+            <h1 class="header__title-first header__title-first__padding-top">
                 VÄLJ DITT RUM
             </h1>
-            <section class="search__form search__form--sticky">
+            <div class="search">
+            <section class="search__form search__form--fixed">
             <h2 class="heading__title-second">
                 SÖK & BOKA
             </h2>
@@ -196,6 +197,20 @@
             </aside>
         </article>
         </section>
+
+        <!--PRESENTKORT-->
+        <section class="gift-container">
+            <article class="gift">
+                <figure class="gift__image"></figure>
+            </article>
+            <article class="gift-article">
+                <h2 class="heading__title-second heading__title-second--left">ENKEL ATT GE, UNDERBART ATT FÅ</h2>
+                <p class="article-text">Kanske tänker du att presentkort är tråkigt att ge?<br>
+                    Lorem ipsum dolor sit amet consectetur. Sit venenatis arcu nunc consectetur neque. Vel amet netus amet eu elit.</p>
+                <button type="submit" class="submit-btn__button">BESTÄLLA PRESENTKORT</button>
+            </article>
+        </section>
+    </div>
     
     </main>
 
