Keep on working with media query
Signed-off-by: Sunsanee <3kdyhfe24.perssu@folkuniversitetet.nu>

--- a/Results.html
+++ b/Results.html
@@ -31,10 +31,16 @@
                 <a href="" class="menu__link">
                     <h3 class="menu__title">Aktiviteter</h3>
                 </a>
-                <h3 class="menu__title menu__title--icon">
-                    <i class="fa-regular fa-user"></i>
-                    Mina sidor
-                </h3>
+                <a href="" class="menu__link">
+                    
+                    <h3 class="menu__title menu__title--icon">
+                        <i class="fa-regular fa-user"></i>
+                        Mina sidor
+                    </h3>
+                </a>
+                <a href="" class="menu__ham">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
             </nav>
         </header>
 
@@ -44,12 +50,12 @@
                 <h1 class="header__title-first header__title-first__padding-top">
                     VÄLJ DITT RUM
                 </h1>
-                <h3 class="heading__title-third">
-                    Du har sökt fredag 3 jan - sön 5 jan , 2 nätter, 1 rum , 2 gäster
+                <h3 class="heading__title-third heading__title-third--center">
+                    Du har sökt fredag 3 jan - sön 5 jan, 2 nätter, 1 rum , 2 gäster
                 </h3>
 
                 <div class="results">
-                <section class="results__flex-box results__box--sticky">
+                <section class="results__flex-box results__box">
                 <h2 class="heading__title-second--small">
                     DU HAR SÖKT
                 </h2>
@@ -81,10 +87,11 @@
                         </fieldset>
                     </aside>
                 </section>
-
-                    <p class="article-text">Antal nätter: 2nätter</p>
-                    <p class="article-text">Antal rum: 1 rum, 2 gäster</p>
-                    
+                <section>
+                    <aside class="description">
+                        <p class="article-text">Antal nätter: 2nätter</p>
+                        <p class="article-text">Antal rum: 1 rum, 2 gäster</p>
+                    </aside>
                     <button class="submit-btn__button submit-btn__button--small">
                         ÄNDRA SÖKNING
                     </button>
