--- a/Search.html
+++ b/Search.html
@@ -31,10 +31,16 @@
                 <a href="" class="menu__link">
                     <h3 class="menu__title">Aktiviteter</h3>
                 </a>
-                <h3 class="menu__title menu__title--icon">
-                    <i class="fa-regular fa-user"></i>
-                    Mina sidor
-                </h3>
+                <a href="" class="menu__link">
+                    
+                    <h3 class="menu__title menu__title--icon">
+                        <i class="fa-regular fa-user"></i>
+                        Mina sidor
+                    </h3>
+                </a>
+                <a href="" class="menu__ham">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
             </nav>
         </header>
 
@@ -44,11 +50,11 @@
                 VÄLJ DITT RUM
             </h1>
             <div class="search">
-            <section class="search__form search__form--fixed">
+        <section class="search__form search__form--fixed">
             <h2 class="heading__title-second">
                 SÖK & BOKA
             </h2>
-            <form action="">
+            <form>
                 <label for="check-in__date" class="form__label label-name">Checka In:</label>
                 <input type="date" id="check-in__date" class="form__input input-details">
 
@@ -68,7 +74,7 @@
             </section>
 
              <!--ROOM TYPE-1-->
-          <section class="room-container">
+          <section class="search-room__grid room-container">
             <article class="room-info__flex-box">
              <img src="assets/images/king-size-bed.png" alt="dubble bedroom with king size bed">
              <h2 class="room__heading-titel heading__title-second">
@@ -196,19 +202,6 @@
                 </button>
             </aside>
         </article>
-        </section>
-
-        <!--PRESENTKORT-->
-        <section class="gift-container">
-            <article class="gift">
-                <figure class="gift__image"></figure>
-            </article>
-            <article class="gift-article">
-                <h2 class="heading__title-second heading__title-second--left">ENKEL ATT GE, UNDERBART ATT FÅ</h2>
-                <p class="article-text">Kanske tänker du att presentkort är tråkigt att ge?<br>
-                    Lorem ipsum dolor sit amet consectetur. Sit venenatis arcu nunc consectetur neque. Vel amet netus amet eu elit.</p>
-                <button type="submit" class="submit-btn__button">BESTÄLLA PRESENTKORT</button>
-            </article>
         </section>
     </div>
     
