improve media query

--- a/Search.html
+++ b/Search.html
@@ -69,8 +69,10 @@
                 <input type="number" id="children__quantity" class="form__input input-details" placeholder="upp till 17 år">
             </form>
             <button class="form-btn__submit-button search-form-btn__submit-button">
-                <i class="fa-solid fa-magnifying-glass"></i>SÖK
+                <i class="fa-solid fa-magnifying-glass"></i>
+                SÖK
             </button>
+        
             </section>
 
              
