The correct folder

--- a/Hotel.html
+++ b/Hotel.html
@@ -74,13 +74,14 @@
         <main class="room-container__grid">
 
           <!--ROOM TYPE-1-->
+          <article class="room__article">
+            <img src="assets/images/king-size-bed.png" alt="dubble bedroom with king size bed">
 
-            <article class="room__article">
-             <img src="assets/images/king-size-bed.png" alt="dubble bedroom with king size bed">
+             
              <h2 class="heading__title-second--small">
               Dubbelrum premium Svit – 27 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
             <aside class="room-btn__button">
@@ -92,6 +93,7 @@
               VÄLJA & BOKA
              </button>
             </aside>
+
             </article>
   
 
@@ -101,7 +103,7 @@
              <h2 class="heading__title-second--small">
               Dubbelrum Deluxe – 27 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
              <aside class="room-btn__button">
@@ -123,7 +125,7 @@
              <h2 class="heading__title-second--small">
               Familjen stuga – 105 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
              <aside class="room-btn__button">
@@ -145,7 +147,7 @@
              <h2 class="heading__title-second--small">
               Familjen stuga – 115 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
              <aside class="room-btn__button">
@@ -166,7 +168,7 @@
              <h2 class="heading__title-second--small">
               Premium stuga – 120 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
              <aside class="room-btn__button">
@@ -188,7 +190,7 @@
              <h2 class="heading__title-second--small">
               Premium lägenhet – 69 kvm
              </h2>
-             <p class="article-text">
+             <p class="article-text article-text--margin-2">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non perspiciatis quaerat tempore esse, provident voluptate numquam recusandae illum voluptatibus?
              </p>
              <aside class="room-btn__button">
