Linking all pages together

--- a/Hotel.html
+++ b/Hotel.html
@@ -21,13 +21,13 @@
     </figure>
   
     <nav class="menu">
-        <a href="#" class="menu__link">
+        <a href="Hotel.html" class="menu__link">
             <h3 class="menu__title">Hotelet</h3>
         </a>    
-        <a href="#" class="menu__link">
+        <a href="Search.html" class="menu__link">
             <h3 class="menu__title">Erbjuanden</h3>
         </a>
-        <a href="#" class="menu__link">
+        <a href="Index.html" class="menu__link">
             <h3 class="menu__title">Fest & Event</h3>
         </a>
         <a href="#" class="menu__link">
