--- a/Results.html
+++ b/Results.html
@@ -19,13 +19,13 @@
             </figure>
           
             <nav class="menu">
-                <a href="#" class="menu__link">
+                <a href="Hotel.html" class="menu__link">
                     <h3 class="menu__title">Hotelet</h3>
                 </a>    
-                <a href="#" class="menu__link">
+                <a href="Search.html" class="menu__link">
                     <h3 class="menu__title">Erbjuanden</h3>
                 </a>
-                <a href="#" class="menu__link">
+                <a href="Index.html" class="menu__link">
                     <h3 class="menu__title">Fest & Event</h3>
                 </a>
                 <a href="#" class="menu__link">
@@ -93,9 +93,11 @@
                             <p class="article-text">Antal nätter: 2nätter</p>
                             <p class="article-text">Antal rum: 1 rum, 2 gäster</p>
                         </aside>
-                        <button class="submit-btn__button submit-btn__button--small">
-                            ÄNDRA SÖKNING
-                        </button>
+                        <a href="Booking.html">
+                            <button class="submit-btn__button submit-btn__button--small">
+                                ÄNDRA SÖKNING
+                            </button>
+                        </a>
                     </section>
                 
                 </section>
