--- a/Booking.html
+++ b/Booking.html
@@ -25,7 +25,7 @@
                 <a href="Hotel.html" class="menu__link">
                     <h3 class="menu__title">Hotelet</h3>
                 </a>    
-                <a href="#" class="menu__link">
+                <a href="Search.html" class="menu__link">
                     <h3 class="menu__title">Erbjuanden</h3>
                 </a>
                 <a href="#" class="menu__link">
